--- a/css/task4.css
+++ b/css/task4.css
@@ -1,5 +1,7 @@
+@import url(http://fonts.googleapis.com/earlyaccess/opensanshebrew.css);
+
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans Hebrew', sans-serif;
     font-weight: 500;
     margin:0;
     background:white;
